# Ed-Fi-SDK-MCP

./: CLI-USAGE.md  README.md  analyze-spec.js  package-lock.json  package.json  test-domain.mjs
.github/: copilot-instructions.md
.github/workflows/: on-pullrequest.yml
Ed-Fi-SDK-MCP/src/: index.ts
docs/: local-usage.md  schema-visualization.md  visualization-examples.md
docs/requirements/: ideas.md  prompt-1.md  prompt-2.md  prompt-3.md  prompt-4.md  prompt-5.md  prompt-6.md  user-stories.md
poc/before/: .env.example  .gitignore  README.md  load_students.py  pyproject.toml  students.csv  test_loader.py
src/: cli.ts  diagram-generator.ts  index.ts
src/domains/: 4.0.json  4.0.ts  5.0.json  5.0.ts  5.1.json  5.1.ts  5.2.json  5.2.ts  index.ts  types.ts
